[package]
name = "neuquant_skin"
version = "0.0.4"
edition = "2021"
repository = "github.com:pixagram-blockchain/pixa-neuquant"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

